--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.3.0",
         "bootstrap-icons": "^1.9.1"
     }
 }
