--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /node_modules
+/public
 /public/hot
 /public/storage
 /storage/*.key
@@ -13,3 +14,5 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
+composer.lock
+package-lock.json
