--- a/package.json
+++ b/package.json
@@ -1,13 +1,8 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
@@ -15,16 +10,18 @@
         "autoprefixer": "^10.4.2",
         "axios": "^0.21",
         "bootstrap": "^5.1.3",
-        "laravel-mix": "^6.0.6",
+        "laravel-vite-plugin": "^1.0.1",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.11",
-        "sass-loader": "^11.0.1"
+        "sass-loader": "^11.0.1",
+        "vite": "^5.0.12"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.3.0",
         "bootstrap-icons": "^1.9.1",
         "jquery": "^3.7.1"
-    }
+    },
+    "type": "module"
 }
